<resources>
    <string name="app_name">Bosque Panetteria</string>
    <string name="cadastrar">Cadastrar-se</string>
    <string name="entrar">Entrar</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Senha</string>
    <string name="txt_tela_cadastro">Não tem uma conta?</string>
    <string name="bem_vindo">Seja Bem-Vindo!</string>
    <string name="ola">Olá</string>
    <string name="esqueci_senha">Esqueci a senha</string>
    <string name="txt_tela_cadastro2">Registre-se aqui!</string>
    <string name="desde_2014">DESDE 2014</string>
    <string name="ou_continue_com_string">Ou continue com</string>
    <string name="entrar_string">Entrar</string>
    <string name="concordo_com_a_politica_de_privacidade_string">Concordo com a política de privacidade</string>
    <string name="seja_bem_vindo_string">Seja Bem-vindo!</string>
    <string name="criar_conta_string">Criar Conta</string>
    <string name="usuario_string">Usuário</string>
    <string name="email_string">Email</string>
    <string name="senha_string">Senha</string>
    <string name="confirmar_senha_string">Confirmar Senha</string>
    <string name="telefone_string">Telefone</string>
    <string name="login_com_google_string">Login com Google</string>
    <string name="ja_tem_conta_string">Já tem uma conta?</string>
    <string name="entre_aqui">" Entre aqui."</string>
    <string name="categorias_string">Categorias</string>
    <string name="promo__es_string">Promoções</string>
    <string name="mais_vendidos_string">Mais Vendidos</string>
    <string name="menu_string">Menu</string>
    <string name="bolo_de_chocolate_string">Bolo de Chocolate</string>
    <string name="r__14_00_string">R$ 14,00</string>
    <string name="coxinha_de_frango_string">Coxinha de Frango</string>
    <string name="r__6_00_string">R$ 6,00</string>
    <string name="__56_avalia__es__string">(56 avaliações)</string>
    <string name="__141_avalia__es__string">(141 avaliações)</string>
    <string name="default_web_client_id">1:457503691373:android:f63801c160efa742e52564</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="card_pio">Cardápio</string>
    <string name="carrinho">Carrinho</string>
    <string name="title_activity_teste_menu">TesteMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="app_name_nav">Navigation Drawer</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
</resources>