<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LogActivity"
    android:layout_centerInParent="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white">
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/leaguespartanmedium"
        android:gravity="center"
        android:text="@string/ola"
        android:textColor="@color/black"
        android:textSize="26sp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/leaguespartanregular"
        android:gravity="center"
        android:text="@string/bem_vindo"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView"
        android:layout_marginTop="50dp"
        android:textColor="@color/black"
        app:boxBackgroundColor="@color/rectangle_15_color"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:errorEnabled="true"
        app:errorTextColor="@color/red"
        app:hintAnimationEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email_24"
            android:drawablePadding="15dp"
            android:fontFamily="@font/leaguespartanregular"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutSenha"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_below="@+id/textInputLayoutEmail"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        app:boxBackgroundColor="@color/rectangle_15_color"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:errorEnabled="true"
        app:errorTextColor="@color/red"
        app:hintAnimationEnabled="true"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_lock_24"
            android:drawablePadding="15dp"
            android:fontFamily="@font/leaguespartanregular"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/container_check_forget"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_below="@+id/textInputLayoutSenha"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:fontFamily="@font/leaguespartanregular"
            android:gravity="center"
            android:paddingHorizontal="4dp"
            android:text="Lembrar senha"
            android:textColor="@color/grey"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/btnforgpass"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="220dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/leaguespartanregular"
            android:gravity="center"
            android:onClick="onButtonClick"
            android:text="@string/esqueci_senha"
            android:textColor="@color/grey"
            android:textSize="15sp" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayoutSenha"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        app:cardElevation="5dp"
        app:cardCornerRadius="100dp">

        <Button
            android:id="@+id/btn_entrar"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:fontFamily="@font/leaguespartanmedium"
            android:text="@string/entrar"
            android:background="@drawable/rectangle_25_shape"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cv_log"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/txtTelaCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/leaguespartanregular"
            android:text="@string/txt_tela_cadastro"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@id/btnRegistreSe"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/btnRegistreSe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:paddingLeft="2dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/leaguespartanregular"
            android:onClick="onButtonClick"
            android:text="@string/txt_tela_cadastro2"
            android:textColor="@color/red"
            android:textSize="15sp" />

    </RelativeLayout>

</RelativeLayout>